--- a/Leah/wk01/5-fri/trains/index.html
+++ b/Leah/wk01/5-fri/trains/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <p>Take the last train to Clarksville -> See console (for now)</p>
-    <script src="trains.js" charset="utf-8"></script>
+    <script src="trains2.js" charset="utf-8"></script>
   </body>
 </html>
