did fashion exercise, also added a different solution to the PTV puzzle, GUI WIP

--- a/Leah/wk01/5-fri/trains/index.html
+++ b/Leah/wk01/5-fri/trains/index.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Trains</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p>Take the last train to Clarksville -> See console (for now)</p>
+    <p>Take the last train to Clarksville -> Try out the Journey Planner</p>
+    <form>
+      <h3>Enter Start Station</h3>
+      <input type="text" name="startStationInput" id="startStationInput">
+      <h3>Enter End Station</h3>
+      <input type="text" name="startStationInput" id="startStationInput">
+      <button id="submitButton">Plan My Journey</button>
+    </form>
     <script src="trains2.js" charset="utf-8"></script>
   </body>
 </html>
