--- a/Leah/wk02/2-tue/fashion_css/index.html
+++ b/Leah/wk02/2-tue/fashion_css/index.html
@@ -12,14 +12,12 @@
     <header>
         <h1>Sartre's List</h1> <span class="slogan">Better Dressed People</span>
         <nav>
-            <ul>
-                <li><a href="#">Women's</a></li>
-                <li><a href="#">Men's</a></li>
-                <li><a href="#">On The Street</a></li>
-                <li><a href="#">The Catwalk</a></li>
-                <li><a href="#">AdWatch</a></li>
-                <li><a href="#">About</a></li>
-            </ul>
+            <a href="#">Women's</a>
+            <a href="#">Men's</a>
+            <a href="#">On The Street</a>
+            <a href="#">The Catwalk</a>
+            <a href="#">AdWatch</a>
+            <a href="#">About</a>
         </nav>
     </header>
     <main>
