styl;ed a little, plus movie poster background selection...

--- a/Leah/wk08/1-mon/index.html
+++ b/Leah/wk08/1-mon/index.html
@@ -5,21 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pixel Art</title>
+    <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <aside class="color-selector">
-        <form class="color-picker">
-            <input type="text" class="hex-color">
-            <button type="submit">Set Colour</button>
-        </form>
-        <div class="color-indicator">
-            &nbsp;
-        </div>
-    </aside>
-    <main>
-
-    </main>
+    <h1>Pixel Art</h1>
+    <div class="wrapper">
+        <aside class="color-selector">
+            <h3>Select a color</h3>
+            <form class="color-picker">
+                <input type="text" class="hex-color">
+                <button type="submit">Set Colour</button>
+                <div class="color-indicator">
+                        &nbsp;
+                </div>
+            </form>
+        </aside>
+        <main>
+    
+        </main>
+            
+    </div>
+    <h2>Pick a background</h2>
+    <footer></footer>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="app.js"></script>
 </body>
